--- a/tavel_blog.html
+++ b/tavel_blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Travel Blog</title>
-    <link rel="shortcut icon" href="images/travel_icon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="travel_icon.jpg" type="image/x-icon">
 </head>
 <body>
     <h1>My Traveling Experience</h1>
