--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1 style="background-color: tomato; color:white; border:2px Solid rgb(255, 0, 255);">Meherab Hossain Bhuiyan</h1> <!--Heading-->
+<a href="tavel_blog.html">Travel Blog Page</a>
 <p>Computer Science & Technology Student. I live in Bangladesh and my parants are also from Bangladesh. My mother language is Bangla. althought I want to go to abroad for educational purposes, my love for my country still remains the same. i love my country and it's people too.</p> <!--Paragraph--> 
 <hr> <!--Horizontal Line-->
 <a href = "https://www.google.com">Google</a> <!--Link-->
